# oauth2ms

./: Makefile  config.thunderbird.json  pyproject.toml
oauth2ms/: __init__.py
