[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oauth2ms"
version = "0.0.1"
description = "Authorization for MS servers"
readme = {file = "README.org", content-type = "text/plain"}
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Philipp Denzel", email = "phdenzel@gmail.com"},
]
maintainers = [
  {name = "Philipp Denzel", email = "phdenzel@gmail.com"},
]
keywords = ["Authorization", "MS Office"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Security"]

dependencies = [
  "pyxdg",
  "msal",
  "python-gnupg>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/phdenzel/oauth2ms.git"
Repository = "https://github.com/phdenzel/oauth2ms.git"
Issues = "https://github.com/phdenzel/oauth2ms.git"

[project.scripts]
oauth2ms = "oauth2ms:main"
